--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -113,7 +113,7 @@
                         <p class="card-text">
                             <%=post.createdAt%>
                         </p>
-                        <a href="/chat/" class="btn btn-primary">Go somewhere</a>
+                        <a href="/quest/<%=post._id%>" class="btn btn-primary">Replies</a>
                     </div>
                 </div>
                 <%})%>
