--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <div class="wrapper" id="loginFormContent">
       <div id="container">
           <div id="left">
-              <h1 id="welcome">Welcome</h1>
+              <h1 id="welcome">Welcome back</h1>
               <p id="lorem">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                   Vivamus sodales eros non arcu pellentesque convallis.<br>
