--- a/views/main.ejs
+++ b/views/main.ejs
@@ -106,7 +106,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="testimonial">
                         <div class="testimonial-avatar">
-                            <img src="avatar1.jpg" alt="Testimonial Avatar" class="rounded-full w-16 h-16 mx-auto mb-4">
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Testimonial Avatar" class="rounded-full w-16 h-16 mx-auto mb-4">
                         </div>
                         <p class="text-lg mb-4">"This app has revolutionized how I stay connected with my friends. I
                             love
@@ -115,7 +115,7 @@
                     </div>
                     <div class="testimonial">
                         <div class="testimonial-avatar">
-                            <img src="avatar2.jpg" alt="Testimonial Avatar" class="rounded-full w-16 h-16 mx-auto mb-4">
+                            <img src="https://images.unsplash.com/photo-1489980557514-251d61e3eeb6?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Testimonial Avatar" class="rounded-full w-16 h-16 mx-auto mb-4">
                         </div>
                         <p class="text-lg mb-4">"The group chat functionality is fantastic! It's so easy to coordinate
                             plans
@@ -124,7 +124,7 @@
                     </div>
                     <div class="testimonial">
                         <div class="testimonial-avatar">
-                            <img src="avatar3.jpg" alt="Testimonial Avatar" class="rounded-full w-16 h-16 mx-auto mb-4">
+                            <img src="https://images.unsplash.com/photo-1503249023995-51b0f3778ccf?q=80&w=1920&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Testimonial Avatar" class="rounded-full w-16 h-16 mx-auto mb-4">
                         </div>
                         <p class="text-lg mb-4">"I've tried several chat apps before, but this one is by far the best.
                             Highly recommend!"</p>
