--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,31 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
+<h1>
+    <%= message %>
+</h1>
+<h2>
+    <%= error.status %>
+</h2>
 <pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>error</title>
+    <link rel="stylesheet" href="/stylesheets/error.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+
+<body>
+    <main>
+        <h1>4<span><i class="fas fa-ghost"></i></span>4</h1>
+        <h2>Error: <%= message %>
+        </h2>
+        <p>Sorry, the page you're looking for cannot be accessed</p>
+        <h2>
+            <%= error.status %>
+        </h2>
+    </main>
+</body>
+
+</html>
