--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,13 +1,5 @@
-<h1>
-    <%= message %>
-</h1>
-<h2>
-    <%= error.status %>
-</h2>
-<pre><%= error.stack %></pre>
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +14,8 @@
         <h2>Error: <%= message %>
         </h2>
         <p>Sorry, the page you're looking for cannot be accessed</p>
-        <h2>
-            <%= error.status %>
-        </h2>
+        <span><%= error.stack %></span>
+        <h2><%= error.status %></h2>
     </main>
 </body>
 
